2009-01-07  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566744 – _wrap_g_input_stream_read_async() argument parsing
	has incorrect keyword args

	* gio/ginputstream.override (_wrap_g_input_stream_read_async): Fix
	keyword list to be in sync with positional arguments.

2009-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 566737 – Bad -I ordering can break build

	* Makefile.am:
	* gobject/Makefile.am:
	* gio/Makefile.am:
	* tests/Makefile.am:
	Commit a patch from [dmacks at netspace dot org]

2009-01-04  Mads Chr. Olesen  <gnome-bugzilla@shiyee.dk>

	* gio/gio.defs (gio.File.copy_async, gio.File.copy_finish): Define
	methods.

	* gio/gfile.override (_wrap_g_file_copy_async): New function.

	* tests/test_gio.py (TestFile.test_copy_async): Test the methods.

2009-01-04  Przemysław Grzegorczyk  <pgrzegorczyk@gmail.com>

	Bug 563714 – GNOME Goal: Clean up GLib and GTK+ includes

	* gobject/generate-constants.c:
	* glib/pygspawn.c: Only include toplevel <glib.h>.

2009-01-04  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564018 – pygobject libtool-2.2 patch

	* configure.ac: Apply the patch provided by Cygwin Ports
	maintainer.

2009-01-04  Paul Pogonyshev  <pogonyshev@gmx.net>

	* configure.ac: Branch, bump version to 2.17.0.

2008-12-24  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 547119 – gobject.timeout_add_seconds() not found in docs

	* docs/reference/pyglib-functions.xml (glib.timeout_add_seconds):
	Describe.

2008-12-21  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 564102 – _wrap_g_output_stream_write_async not adding a
	reference to the buffer passed

	* gio/gio.override (pygio_notify_copy_buffer): New function.
	(pygio_free_notify): Free new `buffer' field if it is set.

	* gio/goutputstream.override (_wrap_g_output_stream_write_async):
	Copy the buffer with new pygio_notify_copy_buffer() and use the
	copy for g_output_stream_write_async() call.

	* gio/gfile.override (_wrap_g_file_replace_contents_async): Same
	as for _wrap_g_output_stream_write_async().
